@@ -1,3 +1,10 @@
+2001-05-23  Mo DeJong  <mdejong@redhat.com>
+
+	* unix/tcl.m4 (SC_LOAD_TKCONFIG):
+	Remove use of undefined TCLCONFIG variable and
+	call AC_MSG_RESULT to print the checking result.
+	* win/tcl.m4: Ditto.
+
 2001-05-22  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tclObj.c (TclAllocateFreeObjects): simplified
